support/crown/tests/ui/unrooted_must_root_parameter.stderr
error: Type must be rooted
 --> $DIR/unrooted_must_root_parameter.rs:8:12
  |
8 | fn foo1(_: Foo) {}
  |            ^^^
  |
  = note: `#[deny(crown::unrooted_must_root)]` on by default

error: aborting due to previous error

